--- a/public/framework/complete.css
+++ b/public/framework/complete.css
@@ -11,12 +11,12 @@
 input {font-family: inherit;
  padding: 10px;
  border-radius: 3px;
- border: 2px solid #555;}
+ border: 1px solid #555;}
 
 input[type=submit], input[type=button] {font-family: inherit;
  padding: 10px 20px;
  border-radius: 3px;
- border: 2px solid #555;
+ border: 1px solid #555;
  background: #666;
  color: #fff;}
 
@@ -34,6 +34,64 @@ textarea {padding: 10px;
 .fw-700 {font-weight: 700;}
 .fw-800 {font-weight: 800;}
 .fw-900 {font-weight: 900;}
+/*TOP BOTTOM LEFT RIGHT PROPERTIES*/
+.r-revert {right:revert;}
+.r-auto {right:auto;}
+.r-0 {right:0;}
+.l-revert {left:revert;}
+.l-auto {left:auto;}
+.l-0 {left:0;}
+.t-revert {top:revert;}
+.t-auto {top:auto;}
+.t-0 {top:0;}
+.b-revert {bottom:revert;}
+.b-auto {bottom:auto;}
+.b-0 {bottom:0;}
+/*ALIGN PROPERTIES*/
+	.ai-baseline {align-items: baseline;}
+	.ai-center {align-items: center;}
+	.ai-end {align-items: end;}
+	.ai-flex-end {align-items: flex-end;}
+	.ai-flex-start {align-items: flex-start;}
+	.ai-normal {align-items: normal;}
+	.ai-revert {align-items: revert;}
+	.ai-self-end {align-items: self-end;}
+	.ai-self-start {align-items: self-start;}
+	.ai-start {align-items: start;}
+	.ai-stretch {align-items: stretch;}
+	
+	.as-auto {align-items: auto;}
+	.as-baseline {align-items: baseline;}
+	.as-center {align-items: center;}
+	.as-end {align-items: end;}
+	.as-flex-end {align-items: flex-end;}
+	.as-flex-start {align-items: flex-start;}
+	.as-normal {align-items: normal;}
+	.as-revert {align-items: revert;}
+	.as-self-end {align-items: self-end;}
+	.as-self-start {align-items: self-start;}
+	.as-start {align-items: start;}
+	.as-stretch {align-items: stretch;}
+
+	.ta-center {text-align: center;}
+	.ta-end {text-align: end;}
+	.ta-justify {text-align: justify;}
+	.ta-left {text-align: left;}
+    .ta-revert {text-align: revert;}
+    .ta-right {text-align: right;}
+    .ta-start {text-align: start;}
+
+	.va-baseline {vertical-align: baseline;}
+    .va-bottom {vertical-align: bottom;}
+    .va-middle {vertical-align: middle;}
+    .va-revert {vertical-align: revert;}
+    .va-sub {vertical-align: sub;}
+    .va-super {vertical-align: super;}
+    .va-text-bottom {vertical-align: text-bottom;}
+    .va-text-top {vertical-align: text-top;}
+    .va-top {vertical-align: top;}
+
+
 /* MARGIN PROPERTIES */
 .m {margin: 20px;}
 .m-0 {margin: 0px;}
@@ -68,30 +126,30 @@ textarea {padding: 10px;
 .br-c-fff {border-color: #fff;}
 /*MOBILE ONLY VISIBLE*/
 @media only screen and (max-width: 600px) {
- .only-mob { display: block ! important;}
- .only-tab { display: none ! important;}
- .only-desk { display: none ! important;}
- .no-mob { display: none ! important;}
- .no-tab { display: none ! important;}
- .no-desk { display: none ! important;}
+ .only-mob { display: block;}
+ .only-tab { display: none;}
+ .only-desk { display: none;}
+ .no-mob { display: none;}
+ .no-tab { display: none;}
+ .no-desk { display: none;}
  }
 /*TAB ONLY VISIBLE*/
 @media only screen and (max-width: 960px) and (min-width: 600px) {
- .only-mob { display: none ! important;}
- .only-tab { display: block ! important;}
- .only-desk { display: none ! important;}
- .no-mob { display: block ! important;}
- .no-tab { display: none ! important;}
- .no-desk { display: block ! important;}
+ .only-mob { display: none;}
+ .only-tab { display: block;}
+ .only-desk { display: none;}
+ .no-mob { display: block;}
+ .no-tab { display: none;}
+ .no-desk { display: block;}
  }
 /*DESKTOP ONLY VISIBLE*/
 @media only screen and (min-width: 960px) {
- .only-mob { display: none ! important;}
- .only-tab { display: none ! important;}
- .only-desk { display: block ! important;}
- .no-mob { display: block ! important;}
- .no-tab { display: block ! important;}
- .no-desk { display: none ! important;}
+ .only-mob { display: none;}
+ .only-tab { display: none;}
+ .only-desk { display: block;}
+ .no-mob { display: block;}
+ .no-tab { display: block;}
+ .no-desk { display: none;}
  }
 /*TEXT COLOR*/
 .c-000 {color: #000;}
@@ -147,16 +205,16 @@ textarea {padding: 10px;
 .f-istart {float : inline-start;}
 /*WIDTH PROPERTIES*/
 .w-auto {width:auto;}
-.W-100 {width:100%;}
-.W-90 {width:90%;}
-.W-80 {width:80%;}
-.W-70 {width:70%;}
-.W-60 {width:60%;}
-.W-50 {width:50%;}
-.W-40 {width:40%;}
-.W-30 {width:30%;}
-.W-20 {width:20%;}
-.W-10 {width:10%;}
+.w-100 {width:100%;}
+.w-90 {width:90%;}
+.w-80 {width:80%;}
+.w-70 {width:70%;}
+.w-60 {width:60%;}
+.w-50 {width:50%;}
+.w-40 {width:40%;}
+.w-30 {width:30%;}
+.w-20 {width:20%;}
+.w-10 {width:10%;}
 @media screen and (max-width: 600px) {
 	.res-mob .w-90 { width: 100%;}
 	.res-mob .w-80 { width: 100%;}
