--- a/public/framework/complete.css
+++ b/public/framework/complete.css
@@ -106,18 +106,26 @@ textarea {padding: 10px;
 
 /* MARGIN PROPERTIES */
 .m {margin: var(--wm-space);}
-.m-0 {margin: 0px;}
 .mt {margin-top: var(--wm-space);}
 .mb {margin-bottom: var(--wm-space);}
 .ml {margin-left: var(--wm-space);}
 .mr {margin-right: var(--wm-space);}
+.m-0 {margin: 0px;}
+.mt-0 {margin-top: 0px;}
+.mb-0 {margin-bottom: 0px;}
+.ml-0 {margin-left: 0px;}
+.mr-0 {margin-right: 0px;}
 /* PADDING PROPERTIES */
 .p {padding: var(--wm-space);}
-.p-0 {padding: 0px;}
 .pt {padding-top: var(--wm-space);}
 .pb {padding-bottom: var(--wm-space);}
 .pl {padding-left: var(--wm-space);}
 .pr {padding-right: var(--wm-space);}
+.p-0 {padding: 0px;}
+.pt-0 {padding-top: 0px;}
+.pb-0 {padding-bottom: 0px;}
+.pl-0 {padding-left: 0px;}
+.pr-0 {padding-right: 0px;}
 /* BORDER PROPERTIES */
 .b {border: 1px solid;}
 .b-rad {border-radius: 5px;}
@@ -263,8 +271,8 @@ textarea {padding: 10px;
 .op-07 {opacity: 0.7;}
 .op-08 {opacity: 0.8;}
 .op-09 {opacity: 0.9;}
-.op-1, .op-10 {opacity: 1;}	
- 
+.op-1, .op-10 {opacity: 1;}
+
 /*  TEXT COLORS */	
 	.c-aliceblue {color: aliceblue;}
 	.c-antiquewhite {color: antiquewhite;}
