--- a/public/framework/css/utility.css
+++ b/public/framework/css/utility.css
@@ -5,17 +5,21 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-  :root{
-	--wm-primary: #0d6efd;
-    --wm-secondary: #6c757d;
-    --wm-success: #198754;
-    --wm-info: #0dcaf0;
-    --wm-warning: #ffc107;
-    --wm-danger: #dc3545;
-    --wm-light: #f8f9fa;
-    --wm-dark: #212529;
-	--wm-space: 20px;
-  }
+:root{
+--wm-primary: #0d6efd;
+--wm-secondary: #6c757d;
+--wm-success: #198754;
+--wm-info: #0dcaf0;
+--wm-warning: #ffc107;
+--wm-danger: #dc3545;
+--wm-light: #f8f9fa;
+--wm-dark: #212529;
+--wm-primary-dim: #cfe2ff;
+--wm-success-dim: #d1e7dd;
+--wm-warning-dim: #fff3cd;
+--wm-danger-dim: #f8d7da;
+--wm-space: 20px;
+}
 
 * {box-sizing: border-box;}
 
@@ -33,23 +37,25 @@ input[type=submit], input[type=button] {font-family: inherit;
  color: #fff;}
 
 textarea {padding: 10px;
- border-radius: 3px;
- border: 2px solid #555;
- font-family: inherit;}
- /*TEXT DECORATION*/
-    .td-auto {text-decoration: auto;}
-	.td-blink {text-decoration: blink;}
-	.td-dashed {text-decoration: dashed;}
-    .td-dotted {text-decoration: dotted;}
-    .td-double {text-decoration: double;}
-    .td-line-through {text-decoration: line-through;}
-    .td-none {text-decoration: none;}
-    .td-revert {text-decoration: revert;}
-    .td-overline {text-decoration: overline;}
-    .td-solid {text-decoration: solid;}
-    .td-underline {text-decoration: underline;}
-    .td-wavy {text-decoration: wavy;}
- /*FONT SIZE*/
+border-radius: 3px;
+border: 2px solid #555;
+font-family: inherit;}
+
+/*TEXT DECORATION*/
+.td-auto {text-decoration: auto;}
+.td-blink {text-decoration: blink;}
+.td-dashed {text-decoration: dashed;}
+.td-dotted {text-decoration: dotted;}
+.td-double {text-decoration: double;}
+.td-line-through {text-decoration: line-through;}
+.td-none {text-decoration: none;}
+.td-revert {text-decoration: revert;}
+.td-overline {text-decoration: overline;}
+.td-solid {text-decoration: solid;}
+.td-underline {text-decoration: underline;}
+.td-wavy {text-decoration: wavy;}
+ 
+/*FONT SIZE*/
 .fs-1 {font-size: 1px;}
 .fs-2 {font-size: 2px;}
 .fs-3 {font-size: 3px;}
@@ -78,6 +84,7 @@ textarea {padding: 10px;
 .fs-50 {font-size: 50px;}
 .fs-55 {font-size: 55px;}
 .fs-60 {font-size: 60px;}
+
 /* DISPLAY PROPERTIES*/
 .d-none {display: none;}
 .d-block {display: block;}
@@ -89,6 +96,7 @@ textarea {padding: 10px;
 .d-iflex {display: inline-flex;}
 .d-itable {display: inline-table;}
 .d-igrid {display: inline-grid;}
+
 /* POSITION PROPERTIES*/
 .p-absolute{position:absolute;}
 .p-fixed{position:fixed;}
@@ -96,6 +104,7 @@ textarea {padding: 10px;
 .p-static{position:static;}
 .p-sticky{position:sticky;}
 .p-revert{position:revert;}
+
 /*FLOAT PROPERTIES*/
 .f-left {float : left;}
 .f-right {float : right;}
@@ -103,7 +112,8 @@ textarea {padding: 10px;
 .f-revert {float : revert;}
 .f-iend {float : inline-end;}
 .f-istart {float : inline-start;}
- /*OPACITY PROPERTY*/	
+ 
+ /*OPACITY PROPERTIES*/
 .op-01 {opacity: 0.1;}
 .op-02 {opacity: 0.2;}
 .op-03 {opacity: 0.3;}
@@ -114,6 +124,7 @@ textarea {padding: 10px;
 .op-08 {opacity: 0.8;}
 .op-09 {opacity: 0.9;}
 .op-1, .op-10 {opacity: 1;}
+
 /* FONT WEIGHT */
 .fw-100 {font-weight: 100;}
 .fw-200 {font-weight: 200;}
@@ -124,6 +135,7 @@ textarea {padding: 10px;
 .fw-700 {font-weight: 700;}
 .fw-800 {font-weight: 800;}
 .fw-900 {font-weight: 900;}
+
 /*TOP BOTTOM LEFT RIGHT PROPERTIES*/
 .r-revert {right:revert;}
 .r-auto {right:auto;}
@@ -137,50 +149,50 @@ textarea {padding: 10px;
 .b-revert {bottom:revert;}
 .b-auto {bottom:auto;}
 .b-0 {bottom:0;}
+
 /*ALIGN PROPERTIES*/
-	.ai-baseline {align-items: baseline;}
-	.ai-center {align-items: center;}
-	.ai-end {align-items: end;}
-	.ai-flex-end {align-items: flex-end;}
-	.ai-flex-start {align-items: flex-start;}
-	.ai-normal {align-items: normal;}
-	.ai-revert {align-items: revert;}
-	.ai-self-end {align-items: self-end;}
-	.ai-self-start {align-items: self-start;}
-	.ai-start {align-items: start;}
-	.ai-stretch {align-items: stretch;}
-	
-	.as-auto {align-self: auto;}
-	.as-baseline {align-self: baseline;}
-	.as-center {align-self: center;}
-	.as-end {align-self: end;}
-	.as-flex-end {align-self: flex-end;}
-	.as-flex-start {align-self: flex-start;}
-	.as-normal {align-self: normal;}
-	.as-revert {align-self: revert;}
-	.as-self-end {align-self: self-end;}
-	.as-self-start {align-self: self-start;}
-	.as-start {align-self: start;}
-	.as-stretch {align-self: stretch;}
+.ai-baseline {align-items: baseline;}
+.ai-center {align-items: center;}
+.ai-end {align-items: end;}
+.ai-flex-end {align-items: flex-end;}
+.ai-flex-start {align-items: flex-start;}
+.ai-normal {align-items: normal;}
+.ai-revert {align-items: revert;}
+.ai-self-end {align-items: self-end;}
+.ai-self-start {align-items: self-start;}
+.ai-start {align-items: start;}
+.ai-stretch {align-items: stretch;}
 
-	.ta-center {text-align: center;}
-	.ta-end {text-align: end;}
-	.ta-justify {text-align: justify;}
-	.ta-left {text-align: left;}
-    .ta-revert {text-align: revert;}
-    .ta-right {text-align: right;}
-    .ta-start {text-align: start;}
+.as-auto {align-self: auto;}
+.as-baseline {align-self: baseline;}
+.as-center {align-self: center;}
+.as-end {align-self: end;}
+.as-flex-end {align-self: flex-end;}
+.as-flex-start {align-self: flex-start;}
+.as-normal {align-self: normal;}
+.as-revert {align-self: revert;}
+.as-self-end {align-self: self-end;}
+.as-self-start {align-self: self-start;}
+.as-start {align-self: start;}
+.as-stretch {align-self: stretch;}
 
-	.va-baseline {vertical-align: baseline;}
-    .va-bottom {vertical-align: bottom;}
-    .va-middle {vertical-align: middle;}
-    .va-revert {vertical-align: revert;}
-    .va-sub {vertical-align: sub;}
-    .va-super {vertical-align: super;}
-    .va-text-bottom {vertical-align: text-bottom;}
-    .va-text-top {vertical-align: text-top;}
-    .va-top {vertical-align: top;}
+.ta-center {text-align: center;}
+.ta-end {text-align: end;}
+.ta-justify {text-align: justify;}
+.ta-left {text-align: left;}
+.ta-revert {text-align: revert;}
+.ta-right {text-align: right;}
+.ta-start {text-align: start;}
 
+.va-baseline {vertical-align: baseline;}
+.va-bottom {vertical-align: bottom;}
+.va-middle {vertical-align: middle;}
+.va-revert {vertical-align: revert;}
+.va-sub {vertical-align: sub;}
+.va-super {vertical-align: super;}
+.va-text-bottom {vertical-align: text-bottom;}
+.va-text-top {vertical-align: text-top;}
+.va-top {vertical-align: top;}
 
 /* MARGIN PROPERTIES */
 .m {margin: var(--wm-space);}
@@ -208,6 +220,7 @@ textarea {padding: 10px;
 .mb-15 {margin-bottom: 15px ! important;}
 .ml-15 {margin-left: 15px ! important;}
 .mr-15 {margin-right: 15px ! important;}
+
 /* PADDING PROPERTIES */
 .p {padding: var(--wm-space);}
 .pt {padding-top: var(--wm-space);}
@@ -237,6 +250,7 @@ textarea {padding: 10px;
 .pb-15 {padding-bottom: 15px ! important;}
 .pl-15 {padding-left: 15px ! important;}
 .pr-15 {padding-right: 15px ! important;}
+
 /* BORDER PROPERTIES */
 .b {border: 1px solid;}
 .b-rad {border-radius: 5px;}
@@ -249,11 +263,13 @@ textarea {padding: 10px;
 .btrr-0 {border-top-right-radius: 0px ! important;}
 .bblr-0 {border-bottom-left-radius: 0px ! important;}
 .bbrr-0 {border-bottom-right-radius: 0px ! important;}
+
 /*BORDER WIDTH*/
 .bw-thin {border-width : thin;}
 .bw-medium {border-width : medium;}
 .bw-thick {border-width : thick;}
 .ol-none {outline:none;}
+
 /*BORDER STYLE*/
 .bs-dotted {border-style: dotted;}
 .bs-dashed {border-style: dashed;}
@@ -263,33 +279,52 @@ textarea {padding: 10px;
 .bs-ridge {border-style: ridge;}
 .bs-inset {border-style: inset;}
 .bs-outset {border-style: outset;}
+
 /*BORDER COLOR*/
-.br-c-primary {border-color: var(--wm-primary);}
-.br-c-secondary {border-color: var(--wm-secondary);}
-.br-c-info {border-color: var(--wm-info);}
-.br-c-success {border-color: var(--wm-success);}
-.br-c-danger {border-color: var(--wm-danger);}
-.br-c-dark {border-color: var(--wm-dark);}
-.br-c-light {border-color: var(--wm-light);}
-.br-c-warning {border-color: var(--wm-warning);}
+.br-c-primary, .br-c-primary-h:hover {border-color: var(--wm-primary);}
+.br-c-secondary, .br-c-secondary-h:hover {border-color: var(--wm-secondary);}
+.br-c-info, .br-c-info-h:hover {border-color: var(--wm-info);}
+.br-c-success, .br-c-success-h:hover {border-color: var(--wm-success);}
+.br-c-danger, .br-c-danger-h:hover {border-color: var(--wm-danger);}
+.br-c-dark, .br-c-dark-h:hover {border-color: var(--wm-dark);}
+.br-c-light, .br-c-light-h:hover {border-color: var(--wm-light);}
+.br-c-warning, .br-c-warning-h:hover {border-color: var(--wm-warning);}
+
+.br-c-primary-dim, .br-c-primary-dim-h:hover {border-color: var(--wm-primary-dim);}
+.br-c-success-dim, .br-c-success-dim-h:hover {border-color: var(--wm-success-dim);}
+.br-c-danger-dim, .br-c-danger-dim-h:hover {border-color: var(--wm-danger-dim);}
+.br-c-warning-dim, .br-c-warning-dim-h:hover {border-color: var(--wm-warning-dim);}
+
 /*TEXT COLOR*/
-.c-primary {color: var(--wm-primary);}
-.c-secondary {color: var(--wm-secondary);}
-.c-info {color: var(--wm-info);}
-.c-success {color: var(--wm-success);}
-.c-danger {color: var(--wm-danger);}
-.c-dark {color: var(--wm-dark);}
-.c-light {color: var(--wm-light);}
-.c-warning {color: var(--wm-warning);}
+.c-primary, .c-primary-h:hover {color: var(--wm-primary);}
+.c-secondary, .c-secondary-h:hover {color: var(--wm-secondary);}
+.c-info, .c-info-h:hover {color: var(--wm-info);}
+.c-success, .c-success-h:hover {color: var(--wm-success);}
+.c-danger, .c-danger-h:hover {color: var(--wm-danger);}
+.c-dark, .c-dark-h:hover {color: var(--wm-dark);}
+.c-light, .c-light-h:hover {color: var(--wm-light);}
+.c-warning, .c-warning-h:hover {color: var(--wm-warning);}
+
+.c-primary-dim, .c-primary-dim-h:hover {color: var(--wm-primary-dim);}
+.c-success-dim, .c-success-dim-h:hover {color: var(--wm-success-dim);}
+.c-danger-dim, .c-danger-dim-h:hover {color: var(--wm-danger-dim);}
+.c-warning-dim, .c-warning-dim-h:hover {color: var(--wm-warning-dim);}
+
 /*BACKGROUND COLOR*/
-.bg-c-primary {background: var(--wm-primary);}
-.bg-c-secondary {background: var(--wm-secondary);}
-.bg-c-info {background: var(--wm-info);}
-.bg-c-success {background: var(--wm-success);}
-.bg-c-danger {background: var(--wm-danger);}
-.bg-c-dark {background: var(--wm-dark);}
-.bg-c-light {background: var(--wm-light);}
-.bg-c-warning {background: var(--wm-warning);}
+.bg-c-primary, .bg-c-primary-h:hover {background: var(--wm-primary);}
+.bg-c-secondary, .bg-c-secondary-h:hover {background: var(--wm-secondary);}
+.bg-c-info, .bg-c-info-h:hover {background: var(--wm-info);}
+.bg-c-success, .bg-c-success-h:hover {background: var(--wm-success);}
+.bg-c-danger, .bg-c-danger-h:hover {background: var(--wm-danger);}
+.bg-c-dark, .bg-c-dark-h:hover {background: var(--wm-dark);}
+.bg-c-light, .bg-c-light-h:hover {background: var(--wm-light);}
+.bg-c-warning, .bg-c-warning-h:hover {background: var(--wm-warning);}
+
+.bg-c-primary-dim, .bg-c-primary-dim-h:hover {background: var(--wm-primary-dim);}
+.bg-c-success-dim, .bg-c-success-dim-h:hover {background: var(--wm-success-dim);}
+.bg-c-danger-dim, .bg-c-danger-dim-h:hover {background: var(--wm-danger-dim);}
+.bg-c-warning-dim, .bg-c-warning-dim-h:hover {background: var(--wm-warning-dim);}
+
 /*OUTLINE PROPERTIES*/
 .ol-none {outline:none;}
 .ols-dotted {outline-style: dotted;}
@@ -308,22 +343,26 @@ textarea {padding: 10px;
 .ol-c-dark {outline-color: var(--wm-dark);}
 .ol-c-light {outline-color: var(--wm-light);}
 .ol-c-warning {outline-color: var(--wm-warning);}
+
 /*OVERFLOW PROPERTIES*/
 .of-visible {overflow:visible;}
 .of-hidden {overflow:hidden;}
 .of-scroll {overflow:scroll;}
 .of-auto {overflow:auto;}
+
 /*Z-INDEX PROPERTIES*/
 .zi-n1 {z-index : -1;}
 .zi-1 {z-index : 1;}
 .zi-2 {z-index : 2;}
 .zi-3 {z-index : 3;}
 .zi-x9 {z-index : 999999999;}
+
 /*LINE HEIGHT*/
 .lh-inherit {line-height: inherit;}
 .lh-initial {line-height: initial;}
 .lh-normal {line-height: normal;}
 .lh-revert {line-height: revert;}
+
 /*LINE BREAK*/
 .lb-anywhere {line-break: anywhere;}
 .lb-auto {line-break: auto;}
@@ -331,12 +370,14 @@ textarea {padding: 10px;
 .lb-normal {line-break: normal;}
 .lb-revert {line-break: revert;}
 .lb-strict {line-break: strict;}
-/*WORD BREAK*/	
+
+/*WORD BREAK*/
 .wb-break-all {word-break: break-all;}
 .wb-break-word {word-break: break-word;}
 .wb-keep-all {word-break: keep-all;}
 .wb-normal {word-break: normal;}
 .wb-revert {word-break: revert;}
+
 /*MOBILE ONLY VISIBLE*/
 @media only screen and (max-width: 600px) {
  .only-mob { display: block;}
@@ -346,6 +387,7 @@ textarea {padding: 10px;
  .no-tab { display: block;}
  .no-desk { display: block;}
  }
+
 /*TAB ONLY VISIBLE*/
 @media only screen and (max-width: 960px) and (min-width: 600px) {
  .only-mob { display: none;}
@@ -355,6 +397,7 @@ textarea {padding: 10px;
  .no-tab { display: none;}
  .no-desk { display: block;}
  }
+
 /*DESKTOP ONLY VISIBLE*/
 @media only screen and (min-width: 960px) {
  .only-mob { display: none;}
@@ -378,27 +421,26 @@ textarea {padding: 10px;
 .w-20, .no-res .w-20 {width:20%;}
 .w-10, .no-res .w-10 {width:10%;}
 @media screen and (max-width: 600px) {
-	.res-mob .d-flex {display:block;}
-	.res-mob .w-90 { width: 100%;}
-	.res-mob .w-80 { width: 100%;}
-	.res-mob .w-70 { width: 100%;}
-	.res-mob .w-60 { width: 100%;}
-	.res-mob .w-50 { width: 100%;}
-	.res-mob .w-40 { width: 100%;}	
-	.res-mob .w-30 { width: 100%;}
-	.res-mob .w-20 { width: 100%;}
-	.res-mob .w-10 { width: 100%;}
-	}
+.res-mob .d-flex {display:block;}
+.res-mob .w-90 { width: 100%;}
+.res-mob .w-80 { width: 100%;}
+.res-mob .w-70 { width: 100%;}
+.res-mob .w-60 { width: 100%;}
+.res-mob .w-50 { width: 100%;}
+.res-mob .w-40 { width: 100%;}
+.res-mob .w-30 { width: 100%;}
+.res-mob .w-20 { width: 100%;}
+.res-mob .w-10 { width: 100%;}
+}
 @media only screen and (max-width: 960px) {
-	.res-tab .d-flex {display:block;}	
-	.res-tab .w-90 { width: 100%;} 
-	.res-tab .w-80 { width: 100%;} 
-	.res-tab .w-70 { width: 100%;} 
-	.res-tab .w-60 { width: 100%;} 
-	.res-tab .w-50 { width: 100%;} 
-	.res-tab .w-40 { width: 100%;} 
-	.res-tab .w-30 { width: 100%;} 
-	.res-tab .w-20 { width: 100%;} 
-	.res-tab .w-10 { width: 100%;} 
-	}
-
+.res-tab .d-flex {display:block;}
+.res-tab .w-90 { width: 100%;} 
+.res-tab .w-80 { width: 100%;} 
+.res-tab .w-70 { width: 100%;} 
+.res-tab .w-60 { width: 100%;} 
+.res-tab .w-50 { width: 100%;} 
+.res-tab .w-40 { width: 100%;} 
+.res-tab .w-30 { width: 100%;} 
+.res-tab .w-20 { width: 100%;} 
+.res-tab .w-10 { width: 100%;} 
+}
